--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
       with:
         personal_token: ${{ secrets.PAT_TOKEN }}
         publish_branch: unittests
-        publish_dir: coverage-report
+        publish_dir: coverage
         allow_empty_commit: false
         keep_files: false
         force_orphan: false
