--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Give execute permission to PHPUnit
       run: chmod +x vendor/bin/phpunit
     - name: Run PHPUnit tests
-      run: php vendor/phpunit/phpunit/phpunit --log-junit junit.xml --coverage-clover coverage.xml
+      run: php -dxdebug.mode=coverage vendor/bin/phpunit --coverage-html coverage-report
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@master
       env:
