--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,7 @@ jobs:
       run: chmod +x vendor/bin/phpunit
 
     - name: Run PHPUnit tests
-      run: |
-        php -dxdebug.mode=coverage vendor/bin/phpunit --coverage-clover coverage.xml
+      run: php -dxdebug.mode=coverage vendor/bin/phpunit --coverage-html coverage-report
 
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@master
