--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
         "psr-4": {
             "App\\": "src/",
             "DB\\": "src/DB/",
-            "App\\Controller\\": "src/Controller/",
-            "App\\Model\\": "src/Model/"
+            "Controller\\": "src/Controller/",
+            "Model\\": "src/Model/"
             
         }
     },
